--- a/src/SEVRA_frontend/public/sevra_webpage.html
+++ b/src/SEVRA_frontend/public/sevra_webpage.html
@@ -30,7 +30,7 @@
         <div class="edge-line right"></div>
     
         <div class="video-container">
-            <video autoplay loop muted playbackRate="0.7">
+            <video autoplay loop muted playbackRate="0.7" loading="lazy">
                 <source src="Videos/stock_container1.mp4" type="video/mp4">
             </video>
         </div>
@@ -55,7 +55,7 @@
     <!-- Second Content Group -->
     <div class="Second-Content-group">
         <div class="video-container">
-            <video autoplay loop muted playbackRate="0.7">
+            <video autoplay loop muted playbackRate="0.7" loading="lazy">
                 <source src="Videos/stock_container2.mp4" type="video/mp4">
             </video>
         </div>
@@ -90,7 +90,7 @@
         <div class="edge-line right"></div>
 
         <div class="video-container">
-            <video autoplay loop muted playbackRate="0.7">
+            <video autoplay loop muted playbackRate="0.7" loading="lazy">
                 <source src="Videos/stock_container3.mp4" type="video/mp4">
             </video>
         </div>
@@ -132,7 +132,7 @@
         <div class="edge-line right"></div>
 
         <div class="video-container">
-            <video autoplay loop muted playbackRate="0.7">
+            <video autoplay loop muted playbackRate="0.7" loading="lazy">
                 <source src="Videos/stock_footer.mp4" type="video/mp4">
             </video>
         </div>
@@ -165,7 +165,7 @@
     </div>
 
     <script src="script.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js" defer></script>
     <script>
       particlesJS('particles-js', {
         particles: { number: { value: 50 }, color: { value: '#00ff62' }, size: { value: 3 } }
